--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -10,10 +10,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Chart Fragment"
-        android:textSize="30sp"
-        android:textAlignment="center"
+        android:fontFamily="@font/blue_yellow"
         android:gravity="center"
-        android:textColor="@color/white"/>
+        android:text="@string/chart_fragment"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        tools:ignore="TextContrastCheck" />
 
 </FrameLayout>
