--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home Fragment"
+        android:fontFamily="@font/blue_yellow"
+        android:text="@string/home_fragment"
         android:textSize="30sp"
         android:textAlignment="center"
         android:gravity="center"
