--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -9,7 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="List Fragment"
+        android:fontFamily="@font/blue_yellow"
+        android:text="@string/list_fragment"
         android:textSize="30sp"
         android:textAlignment="center"
         android:gravity="center"
